<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_edit_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.upi.mobprogproject.content.FeedsFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="RtlHardcoded">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bell"
                android:paddingRight="10dp"
                android:minHeight="30dip"
                android:maxHeight="30dip"
                android:src="@drawable/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/bell"
                android:fontFamily="roboto"
                android:paddingLeft="100dp"
                android:layout_centerInParent="true"
                android:text="@string/messagescaps"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/searchbg"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:layout_below="@+id/toolbar2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcMess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchView" />


    <!--
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="368dp"
            android:layout_height="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/searchbg"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcMess"
            android:layout_width="368dp"
            android:layout_height="437dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />
    </android.support.constraint.ConstraintLayout>
    -->

</RelativeLayout>
